2008-04-09  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/bessel/gamma.cpp, itpp/base/itcompat.h,
	itpp/base/math/log_exp.h, itpp/base/math/misc.cpp,
	itpp/base/math/misc.h, itpp/base/random.cpp,
	itpp/stat/mog_generic.cpp: Move isinf(), isnan() and isfinite()
	definitions to itcompat.h

	These three functions are conditionally defined on platforms,
	which do not have them in standard headers. Therefore, the best
	location for them in IT++ is the itcompat.h header file.

	* configure.ac.in, itpp/base/itcompat.cpp, itpp/base/itcompat.h,
	itpp/base/random.cpp, itpp/base/sources.mk, itpp/config_msvc.h,
	win32/itpp_acml.vcproj, win32/itpp_mkl.vcproj:
	Add implementation of expm1() function

	The expm1() function from C99 standard is not available in MSVC++
	compiler. This implementation is taken from the GNU Scientific
	Library (GSL) and will be only used on platforms that do not have
	their own expm1() function.

	* itpp/base/binfile.h, itpp/base/itcompat.h, itpp/base/itfile.h,
	itpp/base/ittypes.h, itpp/base/sources.mk, itpp/fixed/fix_base.h,
	itpp/itbase.h, win32/itpp_acml.vcproj, win32/itpp_mkl.vcproj:
	Rename ittypes.h to itcompat.h

	Beside fixed size integer type definitions, the new file
	itcompat.h will include all conditional implementations of
	functions, which are non available on various platforms and
	compilers, e.g. std::isfinite() or expm1().

2008-04-08  Adam Piatyszek  <ediap@users.sourceforge.net>

	* README, doc/local/index.doc.in: Reworded and rearranged the
	brief description of the IT++ library

	Thanks to Kumar Appaiah for some language suggestions.

-------------------------------------------------------------------------------

2008-03-31  Adam Piatyszek  <ediap@users.sourceforge.net>

	* IT++ 4.0.4 release (SVN tag: release-4-0-4)

	* NEWS, VERSION: Add release notes and update version number for
	IT++ 4.0.4

	* win32/itpp_acml_tests/Makefile.am,
	win32/itpp_mkl_tests/Makefile.am: Add converters_test.vcproj to